--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,27 +4,31 @@
     "name": "Directorio Rick and Morty",
     "description": "Buscador alimentado vía API que brinda información sobre los personajes de la serie",
     "codeLink": "https://github.com/silviaespanagil/modulo-3-evaluacion-final-silviaespanagil",
-    "appLink": "https://silviaespanagil.github.io/modulo-3-evaluacion-final-silviaespanagil/#/"
+    "appLink": "https://silviaespanagil.github.io/modulo-3-evaluacion-final-silviaespanagil/#/",
+    "imgURL": "https://user-images.githubusercontent.com/81619759/122358191-b5d88300-cf54-11eb-9261-3359076e6d5b.png"
   },
   {
     "id": "2",
     "name": "Buscador de series",
     "description": "Aplicación web alimentada vía API permite guardar series y agregarlas a favoritos",
     "codeLink": "https://github.com/silviaespanagil/modulo-2-evaluacion-final-silviaespanagil",
-    "appLink": "http://silviaespanagil.github.io/modulo-2-evaluacion-final-silviaespanagil/"
+    "appLink": "http://silviaespanagil.github.io/modulo-2-evaluacion-final-silviaespanagil/",
+    "imgURL": "https://user-images.githubusercontent.com/81619759/119475543-88c9f380-bd4d-11eb-9c80-5773ec929ee3.png"
   },
   {
     "id": "3",
     "name": "Juego - Adivina el número",
     "description": "Juego de adivinanza en el que debes adivinar el número escogido por el ordenador. ¿Podrás ganar?",
     "codeLink": "https://github.com/silviaespanagil/modulo-2-evaluacion-intermedia-silviaespanagil",
-    "appLink": "http://silviaespanagil.github.io/modulo-2-evaluacion-intermedia-silviaespanagil/"
+    "appLink": "http://silviaespanagil.github.io/modulo-2-evaluacion-intermedia-silviaespanagil/",
+    "imgURL": "https://user-images.githubusercontent.com/81619759/124809737-be731680-df60-11eb-8a13-8153f06d6ca2.png"
   },
   {
     "id": "4",
     "name": "Website Layout",
     "description": "Pixel perfect design to code proyect.",
     "codeLink": "https://github.com/silviaespanagil/modulo-1-evaluacion-final-silviaespanagil",
-    "appLink": "https://silviaespanagil.github.io/modulo-1-evaluacion-final-silviaespanagil/"
+    "appLink": "https://silviaespanagil.github.io/modulo-1-evaluacion-final-silviaespanagil/",
+    "imgURL": "https://user-images.githubusercontent.com/81619759/124810038-1f9aea00-df61-11eb-8418-58171af66978.png"
   }
 ]
