Change counter image link

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -78,7 +78,7 @@
     "description": "Mi primer projecto con Redux. Una aplicación sencilla con un contador que permite sumar y restar números",
     "codeLink": "https://github.com/silviaespanagil/redux-react-counter",
     "appLink": "https://silviaespanagil.github.io/redux-react-counter/",
-    "imgURL": "https://ibb.co/MVvtTBr"
+    "imgURL": "https://i.ibb.co/C7cYdPg/Screenshot-3.png"
   },
   {
     "status": "inactive",
